--- a/Exercise/Homework/Week2/Lesson2/exercise4/style.css
+++ b/Exercise/Homework/Week2/Lesson2/exercise4/style.css
@@ -1,9 +1,9 @@
-.head{
+.container {
 	background-color: #DDDDDD;
 	text-align: center;
 	height: 130px;
 }
-#container{
+#container-id {
 	text-align: center;
 }
 hr {
