--- a/Exercise/Homework/Week2/Lesson2/exercise1/style.css
+++ b/Exercise/Homework/Week2/Lesson2/exercise1/style.css
@@ -1,23 +1,40 @@
-body{
+body {
 	font-family: verdana;
 	background-repeat;
 	background-color: 996633;
 }
-header{
+header {
 	text-align:center;
 }
-.nav{
+.nav {
 	background-color: pink;
 	width:75%;
 	border:1px solid black;
 	padding: 15px;
 	text-align: center;
 }
-.color{
+.color {
 	background-color: yellow;
 	padding: 5px;
 	border:1px solid;
 	list-style-type: none;
 	text-align: center;
 	display: inline;
+}
+.heading {
+	color: red;
+	font: Arial;
+	text-align: center;
+}
+.headline-about-me {
+	color: white;
+	font: Courier New;
+}
+.headline-about-site {
+	color: white;
+	font:Courier New;
+}
+.container-color {
+	background-color: yellow;
+	text-align: center;
 }
