--- a/Exercise/Homework/Week2/Lesson2/exercise5/style.css
+++ b/Exercise/Homework/Week2/Lesson2/exercise5/style.css
@@ -1,4 +1,4 @@
-body{
+body {
 	background-color: #F6F3E5;
 }
 .grid-container {
@@ -10,15 +10,15 @@ body{
 	float: left;
 	border-bottom: 2px solid black;
 }
-.sidebar_1{
-	background-color: ffffcc;
+.sidebar_1 {
+	background-color: #ffffcc;
 	padding: 12px 7px 12px 7px; 
 }
-.sidebar_2{
+.sidebar_2 {
 	background-color: #ffeeee;
 	padding: 12px 7px 12px 7px;
 }
-.sidebar_3{
+.sidebar_3 {
 	background-color: #CCFFFF;
 	padding: 12px 7px 12px 7px;
 }
@@ -28,12 +28,7 @@ hr {
     color: #333;
     background-color: #333;
 }
-.margin{
+.margin {
 	margin-left: 7%;
 	margin-right: 8%;
-}
-.box {
-  float: left;
-  width: 33.33%;
-  padding: 50px;
 }
