Submit Signed-off-by: tuantrong123 <75593315+tuantrong123@users.noreply.github.com>

--- a/Exercise/Homework/Week3/Lesson1/exercise1/style.css
+++ b/Exercise/Homework/Week3/Lesson1/exercise1/style.css
@@ -1,3 +1,7 @@
+* {
+	margin: 0;
+	padding:0;
+}
 .container {
 	margin: auto;
 	width: 75%;
@@ -21,12 +25,12 @@
 .content_2{
 	display: inline;
 }
-.picture_1 {
+.picture-about {
 	width: 450px;
 	margin: 15px;
 	height: 200px;
 }
-.picture_2 {
+.picture-take-action {
 	width: 450px;
 	height: 200px;
 	margin: 15px;
