--- a/Exercise/Homework/Week4/Lesson1/exercise6/style.css
+++ b/Exercise/Homework/Week4/Lesson1/exercise6/style.css
@@ -1,9 +1,11 @@
 .container-border {
-	padding: 35%;
+	padding-top: 5%;
+	padding-left: 25%;
+
 }
 .container-box {
 	background-color: white;
-	border: solid blue 15px;
+	border: solid blue 12px;
 	height: 600px;
 }
 .button-google{
@@ -50,5 +52,4 @@
 }
 .label_2 {
 	float: right;
-	margin-right: 5%;
 }
