--- a/Exercise/Homework/Week4/Lesson1/exercise6/style.css
+++ b/Exercise/Homework/Week4/Lesson1/exercise6/style.css
@@ -1,30 +1,38 @@
-.container-border {
+.container {
 	padding-top: 5%;
-	padding-left: 25%;
-
+	padding-left: 35%;
+	padding-right: 35%;
+	padding-bottom: 5%;
+	background-image: url('icon/OIP 1.jpg');
+	background-attachment: no-repeat;
+	background-size: cover;
 }
 .container-box {
 	background-color: white;
 	border: solid blue 12px;
 	height: 600px;
+	padding-top: 5%;
 }
 .button-google{
 	width: 30%;
 	background-color: red;
 	height: 40px;
 	color: white;
+	border: solid 1px red;
 }
 .button-facebook{
 	width: 30%;
 	background-color: blue;
 	height: 40px;
 	color: white;
+	border: solid 1px blue;
 }
 .button-call{
 	width: 30%;
 	background-color: green;
 	height: 40px;
 	color: white;
+	border: solid 1px green;
 }
 .text:after {
 	content: "*";
@@ -46,10 +54,11 @@
 	width: 90%;
 	height: 40px;
 }
-.label_1 {
+.text-center {
 	float: left;
 	margin-left: 5%;
 }
-.label_2 {
+.forgot-password {
 	float: right;
+	margin: 5%;
 }
